
Added -e expr and -f file.cal options to all rendering tools, not
just rcontrib/rxcontrib.  Feature request from Peter A-B.

Fixed slight bias in indirect calculation caused by ambient
collision detection, pointed out by Jon Sargent.  New code
keeps track of rejected samples and sells them back to
later calls to get something closer to a true Poisson
sampling method.

Altered rvu "origin" command to take shift amounts forward,
right, and up rather than taking an explicit origin, which
can be done easily enough with the "view" command.  Peter A-B
requested (sort of).

Added genglaze tool created by Taoning Wang to generate
spectral glazing materials based on CGDB data and models.

Fixed bug that caused inf and nan errors with -cw setting
where longer wavelength was substantially less than limits
of specified spectra.

Created bsdfpeaks utility to identify and report full-width,
half-maximum sizes of peaks in SIR and XML inputs.

Changed default super-sampling in bsdf2ttree from 256 to 64,
since there doesn't seem to be much benefit to the higher
sampling rate for most BSDFs.

Fixed problem with "mirror" primitive, which was not permitting
indirect rays to transmit through alternate material type.
Thanks to Jon Sargent for finding problem and help resolving it.

Added experimental C++ based rxpiece tool to default installation
in makeall/Rmakefile.

Added rcomb -mt option to transpose concatenation matrix.

====================
Version 6.1 (Released July 24, 2025)

Fixed array limit bug in EPW file loader.

Fixed bug in rcomb, rmtxop -c and -C option not accepting file paths
starting with '.'

Fixed ordering of spectral data in gensdaymtx output.

Fixed crash in new Poisson sampling routines for large settings of -ad.

Fixed reversal of direct and diffuse values in EPW files.  (Thanks to
Taoning Wang for spotting the error.)

Fixed issue with zero radiation values in gensdaymtx (TW).

(The above fixes were released as official patch 6.0.1)